--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,5 +7,25 @@
   right: 0;
   display: none;
   background-color: #333;
-  opacity: 40%;
+  opacity: .75;
+}
+
+
+body{background-color: pink;}
+
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+	body{background-color: #F00;}
+ }
+ /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+	body{background-color: #0F0;}
+}
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	body{background-color: #00F;}
+}
+ /* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+	body{background-color: #000;}
 }
