--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,22 +10,42 @@
   opacity: .75;
 }
 
+body {
+  background-color: pink;
+}
 
-body{background-color: pink;}
+#contentDiv {
+  padding: 30px 0px 75px;
+}
 
- /* Small devices (landscape phones, 576px and up) */
+#contentDiv.row {
+  margin-top: 20px;
+}
+
+/* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-	body{background-color: #F00;}
- }
- /* Medium devices (tablets, 768px and up) */
+  body {
+    background-color: #F00;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-	body{background-color: #0F0;}
+  body {
+    background-color: #0F0;
+  }
 }
- /* Large devices (desktops, 992px and up) */
+
+/* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	body{background-color: #00F;}
+  body {
+    background-color: #00F;
+  }
 }
- /* Extra large devices (large desktops, 1200px and up) */
+
+/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-	body{background-color: #000;}
+  body {
+    background-color: #000;
+  }
 }
